JumpScript/tests/baselines/reference/objectLiteralMemberWithModifiers1.errors.txt
tests/cases/compiler/objectLiteralMemberWithModifiers1.jump(1,11): error TS1042: 'public' modifier cannot be used here.
tests/cases/compiler/objectLiteralMemberWithModifiers1.jump(1,11): error TS1184: Modifiers cannot appear here.


==== tests/cases/compiler/objectLiteralMemberWithModifiers1.jump (2 errors) ====
    var v = { public foo() { } }
              ~~~~~~
!!! error TS1042: 'public' modifier cannot be used here.
              ~~~~~~
!!! error TS1184: Modifiers cannot appear here.